--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node models/seeds/todoSeeder.js"
+    "seed_todo": "node models/seeds/todoSeeder.js",
+    "seed_user": "node models/seeds/userSeeder.js"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +17,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "express-session": "^1.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.8",
     "nodemon": "^2.0.6"
